fix: adding gap between project in tablets and small devices

--- a/src/index.css
+++ b/src/index.css
@@ -632,6 +632,7 @@ opacity: 1;
   .cards {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
     gap: 1.8rem;
   }
   .card {
